<LinearLayout xmlns:panel="http://schemas.android.com/apk/res/com.demo.xiamenhome"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical" >
    

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/good_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="30dp"
            android:cacheColorHint="#00000000"
            android:divider="@android:color/transparent"
            android:listSelector="@android:color/transparent"
            android:scrollbars="none" >
        </ListView>

        <com.demo.view.Panel
            android:id="@+id/top_panel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            panel:animationDuration="1000"
            panel:content="@+id/panelContent"
            panel:handle="@+id/panelHandle"
            panel:handlebtn="@+id/open"
            panel:linearFlying="true"
            panel:position="top" >

            <LinearLayout
                android:id="@+id/panelHandle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:gravity="right"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/pannel"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:src="@drawable/pannel_bt_down" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/panelContent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/pannel_back"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/goods_pingpai"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/all_brand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/goods_all_pingpai"
                        android:textColor="@android:color/white" />

                    <Gallery
                        android:id="@+id/brand_gallery"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:spacing="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:text="@string/goods_fenlei"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/all_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/goods_all_fenlei"
                        android:textColor="@android:color/white" />

                    <Gallery
                        android:id="@+id/category_gallery"
                        android:layout_width="0.0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:spacing="20dp" />
                </LinearLayout>
            </LinearLayout>
        </com.demo.view.Panel>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/goods_detail_list_top"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/goods_sorts"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/price_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/goods_money"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/jiantou4" />

            <TextView
                android:id="@+id/time_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/goods_time"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/jiantou4" />

            <TextView
                android:id="@+id/number_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/goods_sales"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:background="@drawable/jiantou4" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>