<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/w_h_full"
    android:background="@drawable/update_user" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/demo6" />

            <RelativeLayout
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="15dp" >

                <com.bluemobi.imageload.AsynImageView
                    android:id="@+id/user_photo"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:src="@drawable/head_default" />

                <ImageView
                    android:id="@+id/user_head"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@drawable/user_head" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/user_left"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0.0dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:text="@string/guanzhu"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/favor"
                    android:layout_width="wrap_content"
                    android:layout_height="0.0dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0.0dp"
                    android:layout_weight="1"
                    android:text="@string/fensi"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/fans"
                    android:layout_width="wrap_content"
                    android:layout_height="0.0dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/line2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0.0dp"
                    android:layout_weight="1"
                    android:text="@string/xianhua"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/flower"
                    android:layout_width="wrap_content"
                    android:layout_height="0.0dp"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="140dp"
                android:textColor="@android:color/white"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="35dp"
                android:layout_marginLeft="140dp"
                android:textColor="@android:color/white"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/update_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="10dp"
                android:text="【编辑资料】"
                android:textColor="@color/yellow"
                android:textSize="12dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/user_info"
            android:orientation="vertical"
            android:padding="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="昵称："
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/realname"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="性别："
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/new_sex"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="常住地："
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/domicile"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="活动区域："
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/new_active_area"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_weight="2"
                    android:gravity="right"
                    android:text="自我介绍："
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/remark"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/name_title"
                    android:layout_weight="6"
                    android:paddingLeft="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/user_detail"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/jingbi_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:text="金币："
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

                <TextView
                    android:id="@+id/gold_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/jifen_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:text="积分："
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

                <TextView
                    android:id="@+id/sorce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/fabudianping_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:text="发布点评："
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/huiyuanjibie_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:text="会员等级："
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

                <TextView
                    android:id="@+id/level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="LV1"
                    android:textColor="@color/yellow"
                    android:textSize="11dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/upload_image_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:text="上传图片："
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/addshop_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="right"
                    android:text="增加商家："
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="5"
                    android:textColor="@android:color/white"
                    android:textSize="11dp" />
            </LinearLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/line4" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>